# library

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE.md  META_AUDIT.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md
docs/: DESIGN_SYSTEM.md  EMBEDDED_DOCS.md  ICON_TROUBLESHOOTING.md  VISUAL_STANDARDS.md
src/: core.rs  error.rs  interface.rs  lib.rs  lifecycle.rs  platform.rs  reg.rs  rgb.rs  role.rs  screensaver_runner.rs  screensaver_runtime.rs  win32.rs
src/apps/: bootstrap.rs  daemon.rs  event_log.rs  file_log.rs  game.rs  guard.rs  identity.rs  mod.rs  panic.rs  power_sync.rs  scaffold.rs  service.rs  tui_bootstrap.rs  window.rs  window_position.rs  window_relaunch.rs  window_style.rs  worker.rs
src/apps/chrome/: app_state.rs  chrome_mouse.rs  embedded_docs.rs  mod.rs
src/apps/window/: drag_to_move.rs  mod.rs
src/build_resources/: mod.rs  rc_split.rs
src/core/: build_resources.rs  error.rs  formatting.rs  logo_block.rs  mod.rs  screen_palette.rs  screensaver.rs  xml_escape.rs
src/interface/: mod.rs
src/interface/api/: messages.rs  mod.rs
src/interface/api/platform/: unix_ipc.rs  win32_ipc.rs
src/interface/cli/: doctor.rs  mod.rs  scaffold.rs
src/interface/gui/: mod.rs  native.rs
src/interface/tui/: markdown_viewer.rs  mod.rs  screensaver.rs  text.rs  theme.rs
src/interface/tui/design/: colors.rs  layout_guard.rs  markdown.rs  markdown_viewer.rs  mod.rs  mouse_selection.rs
src/interface/tui/effects/: dimensions.rs  falling_comets.rs  falling_droplets.rs  falling_glyphs.rs  fire.rs  flowing_blocks.rs  flowing_particles.rs  logo.rs  matrix.rs  mod.rs  particles.rs  pulled_blocks.rs  pulled_particles.rs  pulsing_glyphs.rs  pulsing_particles.rs  pulsing_waves.rs  rain.rs  rising_flames.rs  rising_glyphs.rs
src/lifecycle/: mod.rs
src/lifecycle/background/: daemon.rs  event_log.rs  file_log.rs  mod.rs  notification.rs  service.rs
src/lifecycle/foreground/: console.rs  guard.rs  identity.rs  mod.rs  panic.rs  power_sync.rs  tui_bootstrap.rs
src/platform/: embedded.rs  mobile.rs  mod.rs  web.rs
src/platform/native/: config.rs  mod.rs  monitors.rs  reg.rs
src/role/: mod.rs
src/role/application/: formatting.rs  game.rs  mod.rs  packages.rs  palette.rs  rgb.rs
src/screensaver_runtime/: mod.rs
src/screensavers/: beams.rs  bounce.rs  bursts.rs  chaos.rs  cosmos.rs  disco.rs  flame.rs  glyphs.rs  gnats.rs  mod.rs  runtime.rs  storm.rs
src/toolkit/: clipboard.rs  config.rs  gpu.rs  ipc.rs  ipc_fallback.rs  ipc_win32.rs  mod.rs  monitors.rs  packages.rs  platform.rs  platform_embedded.rs  platform_mobile.rs  platform_web.rs  registry.rs  rgb_controller.rs  rgb_protocol.rs  sys_info.rs  sys_info_fallback.rs  sys_info_glyphs.rs  sys_info_linux.rs  sys_info_providers.rs  sys_info_windows.rs  wgpu_renderer.rs
src/toolkit/wlan/: mod.rs  stub.rs
src/ui/: accent_gauge.rs  accent_list.rs  colors.rs  effect_preview.rs  egui_helpers.rs  layout.rs  layout_guard.rs  markdown.rs  markdown_viewer.rs  mod.rs  mouse_selection.rs  screensaver_renderer.rs  status_bar.rs  tabs.rs  text.rs  textbox.rs  theme.rs  title_banner.rs  toast.rs
src/ui/effects/: dimensions.rs  falling_comets.rs  falling_droplets.rs  falling_glyphs.rs  flowing_blocks.rs  flowing_particles.rs  logo.rs  mod.rs  pulled_blocks.rs  pulled_particles.rs  pulsing_glyphs.rs  pulsing_particles.rs  pulsing_waves.rs  rising_flames.rs  rising_glyphs.rs
tests/: design_facade.rs  scenes_facade.rs  screensaver_runtime_facade.rs  taxonomy_compliance.rs
(+110 files in other folders)
