[package]
name = "library"
version = "2026.6.10-1"
authors = ["Jeryd <jerydleuck@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false
description = "Shared utility library, widgets, and platform helpers for the local76 apps and screensavers"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["termwiz"], optional = true }
crossterm = { version = "0.28", features = ["events"], optional = true }
sysinfo = { version = "0.30", default-features = false, optional = true }
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
wgpu = { version = "24.0.0", optional = true }
pollster = { version = "0.4.0", optional = true }
bytemuck = { version = "1.16", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.56.0", default-features = false, optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_EventLog",
    "Win32_System_Services",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Security",
    "Win32_System_Ole",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Pipes",
    "Win32_NetworkManagement_WiFi",
    "Win32_Media",
], optional = true }
windows = { version = "0.52.0", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_Media",
    "Win32_Media_Audio",
], optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = { version = "0.2", optional = true }

[features]
# Cross-platform always-on platform shim
windows-sys = ["dep:windows-sys"]

# Granular features — depend on what you actually need.
widgets = ["dep:ratatui", "dep:crossterm", "window"]
sys-info = ["dep:sysinfo", "windows-sys", "dep:winreg"]
window = ["windows-sys"]
service = ["windows-sys"]
event-log = ["windows-sys"]
notification = ["dep:windows"]
clipboard = ["windows-sys"]
reg = ["dep:winreg", "windows-sys"]
winget = ["dep:rusqlite"]
gui = ["dep:eframe", "dep:egui"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

# The 12 effects in `ui/effects/` (Verb × Noun × Style × Palette).
# No additional deps; effects only use `core::*` primitives.
effects = []

# Composite features (for common combos).
chrome = ["widgets"]
screensaver-runtime = ["widgets", "sys-info", "window", "dep:libc"]

# Backward-compat no-ops. Kept for one cycle so existing consumer
# Cargo.toml features lists keep working. Safe to drop after 2026.6.11.
scenes = []

# Default features
default = ["widgets", "sys-info", "window", "service", "event-log", "reg", "winget", "chrome"]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo
